# mlb_predictor_engine

./: sistem_dogrulama_raporu.md
backend/: .env  .env.example  Dockerfile  README.md  auto_predictor.py  docker-compose.yml  pyproject.toml  vercel.json
backend/app/: daily_runner.py  main.py
backend/app/core/: database.py  http_client.py  lifespan.py
backend/app/data/: ballpark_data.py  f5_hitter_stats_data.py  f5_model_park_data.py  f5_rpg_data.py  first_inning_rpg_data.py  hitter_discipline_data.py  hitter_k_splits_data.py  hitter_patience_data.py  hitting_stats_data.py  lineups_data.py  mbl_pitcher_strike_metrics.py  pitch_ha_data.py  pitcher_k_data.py  pitcher_map_data.py  pitchers_data.py  pitching_metrics_data.py  rpg_data.py  sp_ha_data.py  strike_data.py  team_ba_data.py  team_data.py  team_k_rank_data.py  teamnames.py  test_mlb.py
backend/app/services/: covers_scraper.py  f5_model_module.py  mlb_model_module.py  mlb_unified_engine.py  nrfi_yrfi_module.py  prediction_service.py
backend/data/: bullpen_db.json  daily_matchups.json
backend/test/: test.py  test_f5.py  test_nrfi.py
mlb_predictor_app/: package-lock.json  package.json
mlb_predictor_app/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
mlb_predictor_app/src/lib/: api.ts
mlb_predictor_app/src/types/: mlb.ts
