[project]
name = "mlb-predictor-engine"
version = "0.1.0"
description = "FastAPI backend for MLB predictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "supabase>=2.3.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
